test/error-include.m
// expected-error {{}}
#import "error-no-message.h"
